@@ -11,6 +11,8 @@ Version 1.8.3
        dialog. (Stefan)
 - BUG: Issue #557: Ignored items always set
        global ignores. (Stefan)
+- BUG: Issue #554: newline symbol is always
+       the same in TortoiseMerge. (Stefan)
 - NEW: Issue #551: Remember the 'ignore ancestry'
        option. (Stefan)
 - NEW: Issue #552: Tri-State checkbox handling
